# glitter

./: .gitignore  .gitmodules  DEVELOPMENT_GUIDE.md  FUSION_DATA_FLOW.md  HARDWARE_SETUP.md  QUICK_STATUS.md  README.md  REAL_WORLD_ROADMAP.md  TIMING_SYNC_SYSTEM.md  calibration.py  cleanup_project.sh  detect_usb_lidar.sh  diagnostic_report.md  fusion.py  infrastructure.py  l2_fusion.rviz  map.py  package.xml  project_guide.md  requirements.txt  restart_lidar_usb.sh  setup.py  setup_guide.md  start.sh  test_realsense_lidar.py  test_system.py  utils.py  wait_and_start_lidar_usb.sh
config/: l2_fusion.rviz  l2_fusion_simple.rviz  realsense_l2_combined.rviz
docs/: FIX_CAMERA.md  FIX_CAMERA_NOW.md  FIX_PYKMS.md  GET_CAMERA_RUNNING.md  INSTALL_CAMERA_NOW.md  INSTALL_PI_CAMERA.md  QUICK_CAMERA_FIX.md  REAL_WORLD_ROADMAP.md  START_CAMERA.md  build_libcamera_guide.md  camera_test_results.md  camera_troubleshooting.md  fix_rainbow_colors.md  fusion_quickstart.md  meson_option_types.md  moving_sensor_setup.md  optimization_issues.py  pi_camera_setup.md  project_guide.md  quick_start.md  rviz_guide.md  system_status.md  troubleshooting.md
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: activate_env.sh  build_camera_stack.sh  configure_realsense.sh  install_camera_drivers.sh  install_picamera2.sh  install_pykms.sh  install_realsense.sh  install_unitree_l2.sh  launch_calibration.sh  launch_complete_system.sh  launch_fusion.sh  launch_fusion_only.sh  launch_realsense_l2.sh  launch_realsense_l2_manual.sh  launch_simple.sh  quick_camera_test.sh  setup_env.sh  (+8 more)
(+72 files in other folders)
